@@ -91,6 +91,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   some browsers.
 * (bug 11574) Add an interface message loginstart, which, similarly to loginend,
   appears just before the login form. Patch by MinuteElectron.
+* Do not cache category pages if using 'from' or 'until'
+
 
 === API changes in 1.12 ===
 
